<resources>
    <string name="app_name">Lkhayal_Salarie</string>
    <string name="Connexion">Connexion</string>
    <string name="pwd" />
    <string name="admin">Salarie</string>
    <string name="res3">res3</string>
    <string name="res1">res1</string>
    <string name="Bienvenue">Bienvenue</string>
    <string name="name">name</string>
    <string name="todo">todo</string>
    <string name="Consulter_mon_emploie">Consulter mon emploie</string>
    <string name="res">res</string>
    <string name="mesnotes">Mes notes</string>
    <string name="Consulterseances">consultez vos seances</string>
    <string name="consultervostaches">consultez vos taches</string>
    <string name="salarie">salarié</string>
    <string name="ajouterNote">ajoutez une note</string>
    <string name="Client">Salarié</string>
    <string name="client">Salarié</string>
    <string name="Remarque">Remarques</string>
    <string name="ajouterremarque">Ajoutez une remarque</string>
    <string name="msgsupprimerseance">Voulez vous suprimmer cette seance ?</string>
    <string name="seance">La seance sera suprimmer</string>
    <string name="supprimer">Suprimmer</string>
    <string name="ajouternote">ajoutez note</string>
    <string name="sumNote">tous vos notes</string>
    <string name="listRemarque">Marques</string>
    <string name="sumSeance">seances futures</string>
    <string name="listseance">seances</string>
    <string name="detailseance">seances</string>
    <string name="idseance">Id de seances</string>
    <string name="idsalarie">id de salarié</string>
    <string name="startdate">date de début</string>
    <string name="Duree">duree</string>
    <string name="Description">description</string>
    <string name="idclient">id de client</string>
    <string name="username">email</string>
    <string name="VosseancesFuture">Future seances</string>
</resources>