<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".client_dashboard"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@id/logodyalna"
            android:layout_width="366dp"
            android:layout_height="139dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/logodyalna"
            android:contentDescription="@string/res3" />

        <ImageView
            android:id="@id/Power"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circle_mov"
            android:src="@drawable/ic_baseline_power_settings_new_24"
            android:contentDescription="@string/res1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"

        android:paddingTop="30dp">

        <TextView
            android:id="@id/bienvenue"
            android:layout_width="158dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/Bienvenue"
            android:textColor="@color/green1"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@id/clientconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/client"
            android:textColor="@color/green1"
            android:textSize="25sp"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="478dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@id/ConsulterEmpoie"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="122dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@id/emploie"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_mov"
                    android:contentDescription="@string/todo"
                    android:padding="15dp"
                    android:src="@drawable/ic_baseline_calendar_today_24" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/LightGrey" />

                <TextView
                    android:id="@id/txtCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/Consulter_mon_emploie"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@id/mesNotes"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@id/notes"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_purple"
                    android:contentDescription="@string/res"
                    android:padding="15dp"
                    android:src="@drawable/ic_baseline_sticky_note_2_24" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/LightGrey" />

                <TextView
                    android:id="@id/txtnotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/mesnotes"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>